test/valid/test3.5.puzzle
# This puzzle is solvable
	3  # kjh3jh ljh3## 3;kj33
6 1 0######
3 4 	2    ##
5	 7 8 # 5 7 8
