test/invalid/test3.5.puzzle
# This puzzle is solvable
3
6 1 0
3 a 2
5 7 8
